--- a/app/src/main/res/layout/activity_myprofile.xml
+++ b/app/src/main/res/layout/activity_myprofile.xml
@@ -59,7 +59,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
-                        android:text="Goo"
+                        android:layout_marginBottom="2dp"
                         android:textSize="25dp"
                         app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -69,17 +69,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="hyun"
+                        android:layout_marginBottom="4dp"
                         android:textSize="20dp"
                         app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
                         app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
                     <TextView
                         android:id="@+id/emailText"
-                        android:layout_width="200dp"
-                        android:layout_height="19dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="heidi@gmail.com"
+                        android:layout_marginTop="4dp"
                         app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
                         app:layout_constraintTop_toBottomOf="@+id/IDText" />
 
