--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -37,4 +37,12 @@
         android:visibility="gone">
     </br.tiagohm.markdownview.MarkdownView>
 
+    <WebView
+        android:id="@+id/webView"
+        android:layout_marginTop="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+    </WebView>
+
 </android.support.constraint.ConstraintLayout>
