--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,10 @@
     <color name="colorPrimaryDark">#78909C</color>
     <color name="colorAccent">#4B636E</color>
     <color name="buttonText">#FFF</color>
-    <color name="IDtext">#2D87B0</color>
+    <color name="IDText">#2D87B0</color>
+    <color name="cardBackground">#1A2D87B0</color>
     <color name="tabBackground">#E5F1F7</color>
     <color name="transparent">#1A000000</color>
+    <color name="tabSelectedBackground">#0D000000</color>
 
 </resources>
