--- a/app/src/main/res/layout/created_tab_opend.xml
+++ b/app/src/main/res/layout/created_tab_opend.xml
@@ -34,5 +34,12 @@
         app:layout_constraintTop_toTopOf="@+id/created_open_view"
         app:layout_constraintVertical_bias="0.444" />
 
+    <LinearLayout
+        android:id="@+id/issueFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
 
