--- a/app/src/main/res/layout/issue_tab_assigned.xml
+++ b/app/src/main/res/layout/issue_tab_assigned.xml
@@ -17,7 +17,7 @@
         android:background="@color/buttonText"
         android:minHeight="?attr/actionBarSize"
         app:tabIndicatorColor="@color/buttonText"
-        app:tabSelectedTextColor="@color/IDtext"
+        app:tabSelectedTextColor="@color/IDText"
         android:theme="@style/ThemeOverlay.AppCompat.Light" />
 
     <android.support.v4.view.ViewPager
