--- a/app/src/main/res/layout/item_following.xml
+++ b/app/src/main/res/layout/item_following.xml
@@ -35,7 +35,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
             android:text="hyun"
-            android:textColor="@color/IDtext"
+            android:textColor="@color/IDText"
             android:textSize="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
