--- a/app/src/main/res/layout/item_repo_contributor.xml
+++ b/app/src/main/res/layout/item_repo_contributor.xml
@@ -34,7 +34,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
             android:text="hyun"
-            android:textColor="@color/IDtext"
+            android:textColor="@color/IDText"
             android:textSize="15dp"
             app:layout_constraintStart_toEndOf="@+id/loginAvatarImage"
             app:layout_constraintTop_toTopOf="parent" />
