--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -42,6 +42,7 @@
         android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:focusableInTouchMode="true"
         android:visibility="gone">
     </WebView>
 
