--- a/app/src/main/res/layout/item_issue_event.xml
+++ b/app/src/main/res/layout/item_issue_event.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/issueEventCardView"
     android:layout_margin="4dp">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
 
         <ImageView
             android:id="@+id/eventIcon"
@@ -39,6 +38,3 @@
 
 
     </android.support.constraint.ConstraintLayout>
-
-
-</android.support.v7.widget.CardView>
